chore: fix formatting and improve readability of Slick carousel code

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,40 @@
-.gallery {
+/* Setup */
+
+html {
+	font-size: 16px;
+	line-height: 1.5rem;
+	height: 100%;
+}
+
+body {
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+	flex-direction: column;
+	height: 100%;
+	margin: 0;
+	gap: 0;
+}
+
+/* Layout */
+
+header {
+	display: flex;
+	flex-direction: row;
+	gap: 1rem;
+	padding: 1rem;
+}
+
+.gallery {
+	display: flex; /* Grow to fill available space */
+	flex-direction: row;
+	justify-content: flex-start;
+	flex: 1;
+	overflow-y: auto; /* Adds scroll to the gallery if content overflows */
+	gap: 1px;
+}
+
+.gallery .slick-list,
+.gallery .slick-track {
+	height: 100%;
 }
 
 /* Responsive layout switch */
@@ -11,13 +44,57 @@
 	}
 }
 
-.photo-item {
-	margin: 10px;
-	text-align: center;
+footer {
+	display: flex;
+	flex-direction: row;
+	gap: 1rem;
+	padding: 1rem;
+	/* height: 50px; Temp */
+	height: auto;
 }
 
-.photo-info {
-	margin-top: 10px;
-	font-size: 0.8em;
+/* Content */
+
+.photo-item {
+	align-items: flex-start;
+	display: flex;
+	flex-direction: row;
+	gap: 1rem;
+	margin: 0;
+	text-align: center;
+	justify-content: flex-start;
+	flex: 1;
+	/* overflow: hidden; */
+}
+
+/* .photo-image {
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+	flex: 1;
+} */
+
+/* .photo-image {
+	display: block;
+	height: 100%;
+} */
+
+img {
+	display: block;
+	height: 100%;
+}
+
+/* .photo-info {
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+	flex: 1;
+} */
+
+/* .photo-info p {
 	text-align: left;
+} */
+
+.photo-info {
+	display: none;
 }
